--- a/views/subcontracting_view.xml
+++ b/views/subcontracting_view.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record id="inherit_work_center" model="ir.ui.view">
+            <field name="name">inherit work center</field>
+            <field name="model">mrp.routing.workcenter</field>
+            <field name="inherit_id" ref="mrp.mrp_routing_workcenter_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//notebook/page[2]" position="after">
+                    <page string="Subcontracting">
+                        <group>
+                            <field name="is_subcontract"/>
+                            <field name="subcontract_vendor" attrs="{'invisible': [('is_subcontract', '=', False)], 'required':[('is_subcontract', '=', True)]}"/>
+                            <field name="subcontract_product" attrs="{'invisible': [('is_subcontract', '=', False)], 'required':[('is_subcontract', '=', True)]}"/>
+                            <field name="subcontract_service_cost" attrs="{'invisible': [('is_subcontract', '=', False)], 'required':[('is_subcontract', '=', True)]}"/>
+                        </group>
+                    </page>
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
