--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -22,6 +22,7 @@
                 <xpath expr="//field[@name='product_id']" position="after">
                     <field name="is_rfq" invisible="1"/>
                     <field name="is_subcontract" invisible="1"/>
+                    <field name="previous_workorder_id" invisible="0"/>
                 </xpath>
                 <xpath expr="//notebook/page[3]" position="after">
                     <page string="Subcontracting Info" attrs="{'invisible': [('is_subcontract', '!=', True)]}">
@@ -30,6 +31,7 @@
                             <field name="subcontract_wo_product" domain="[('type', '=', 'service')]"/>
                             <field name="subcontract_wo_service_cost"/>
                             <field name="subcontract_supplier_location"/>
+                            <field name="delivery_challan_id"/>
                         </group>
                     </page>
                 </xpath>
