--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -38,31 +38,25 @@
             </field>
         </record>
 
-        <!--        <record model="ir.actions.act_window" id="mrp_workorder_todo">-->
-        <!--            <field name="name">Work Orders</field>-->
-        <!--            <field name="type">ir.actions.act_window</field>-->
-        <!--            <field name="res_model">mrp.workorder</field>-->
-        <!--            <field name="view_type">form</field>-->
-        <!--            <field name="view_mode">kanban,tree,form,calendar,pivot,graph</field>-->
-        <!--            <field name="search_view_id" ref="mrp.view_mrp_production_workcenter_form_view_filter"/>-->
-        <!--            <field name="context">{'search_default_ready': True, 'search_default_progress': True}</field>-->
-        <!--            <field name="domain">[('is_subcontract', '!=', True)]</field>-->
-        <!--            <field name="help" type="html">-->
-        <!--                <p class="oe_view_nocontent_create">-->
-        <!--                    Click to start a new work order.-->
-        <!--                </p><p>-->
-        <!--                Work Orders are operations to be processed at a Work Center to realize a-->
-        <!--                Manufacturing Order. Work Orders are trigerred by Manufacturing Orders,-->
-        <!--                they are based on the Routing defined on these ones.-->
-        <!--            </p>-->
-        <!--            </field>-->
-        <!--        </record>-->
-
-        <!--        <menuitem id="menu_mrp_workorder_todo"-->
-        <!--                  name="Work Orders"-->
-        <!--                  action="mrp_workorder_todo"-->
-        <!--                  parent="mrp.menu_mrp_manufacturing"-->
-        <!--                  groups="mrp.group_mrp_routings"/>-->
+        <record model="ir.actions.act_window" id="mrp.mrp_workorder_todo">
+            <field name="name">Work Orders</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">mrp.workorder</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,tree,form,calendar,pivot,graph</field>
+            <field name="search_view_id" ref="mrp.view_mrp_production_workcenter_form_view_filter"/>
+            <field name="context">{'search_default_ready': True, 'search_default_progress': True}</field>
+            <field name="domain">[('is_subcontract', '=', False)]</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Click to start a new work order.
+                </p><p>
+                Work Orders are operations to be processed at a Work Center to realize a
+                Manufacturing Order. Work Orders are trigerred by Manufacturing Orders,
+                they are based on the Routing defined on these ones.
+            </p>
+            </field>
+        </record>
 
         <record model="ir.actions.act_window" id="subcontract_workorders">
             <field name="name">Subcontract WorkOrders</field>
