--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -17,12 +17,13 @@
                 </xpath>
                 <xpath expr="//header" position="inside">
                     <button name="create_rfq" type="object" string="Create RFQ" attrs="{'invisible': [('is_rfq', '=', True)]}" class="btn-success"/>
-                    <button name="print_delivery_challan" type="object" string="Print Delivery Challan" class="btn-info"/>
+                    <button name="print_delivery_challan" type="object" string="Print Delivery Challan" attrs="{'invisible': [('delivery_challan', '=', False)]}" class="btn-info"/>
                 </xpath>
                 <xpath expr="//field[@name='product_id']" position="after">
                     <field name="is_rfq" invisible="1"/>
                     <field name="is_subcontract" invisible="1"/>
                     <field name="previous_workorder_id" invisible="1"/>
+                    <field name="delivery_challan" invisible="1"/>
                 </xpath>
                 <xpath expr="//notebook/page[3]" position="after">
                     <page string="Subcontracting Info" attrs="{'invisible': [('is_subcontract', '!=', True)]}">
