--- a/report/delivery_challan_report.xml
+++ b/report/delivery_challan_report.xml
@@ -2,140 +2,73 @@
 <odoo>
 
     <template id="report_delivery_document">
-        <t t-call="web.html_container">
-            <t t-call="web.external_layout">
-                <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)" />
-                <div class="page">
-                    <div class="row" name="customer_address">
-                        <div class="col-xs-4 pull-right">
-                            <div>
-                                <span><strong>Customer Address:</strong></span>
+        <t t-call="web.external_layout">
+            <div class="page">
+                <table class="table table-condensed mt48">
+                    <div class="oe_structure"/>
+                    <div>
+                        <t t-foreach="datas" t-as='val'>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <h2>Delivery Challan for # : <span t-esc="val['picking_id']"/></h2>
+                                </div>
                             </div>
-                            <t t-set="partner" t-value="o.partner_id or (o.move_lines and o.move_lines[0].partner_id) or False"/>
-                            <div t-if="partner" name="partner_header">
-                                <div t-esc="partner"
-                                   t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True}'/>
+                            <div class="row mt32 mb32">
+                                <div class="col-xs-3">
+                                    <strong>Created Date:</strong><br/>
+                                    <span t-esc="val['start_date']"/>
+                                </div>
+                                <div class="col-xs-3">
+                                    <strong>End Date:</strong><br/>
+                                    <span t-esc="val['end_date']"/>
+                                </div>
+
+                                <div class="col-xs-3">
+                                    <strong>Source Location:</strong><br/>
+                                    <span t-esc="val['source_location']"/>
+                                </div>
+                                <div class="col-xs-3">
+                                    <strong>Destination Location:</strong><br/>
+                                    <span t-esc="val['destination_location']"/>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <h2>
-                        <span t-field="o.name"/>
-                    </h2>
-                    <table class="table table-condensed">
-                        <thead>
-                            <tr>
-                                <th t-if="o.origin"><strong>Order (Origin)</strong></th>
-                                <th name="td_sched_date_h">
-                                    <strong>Date</strong>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td t-if="o.origin">
-                                    <span t-field="o.origin"/>
-                                </td>
-                                <td name="td_sched_date">
-                                   <t t-if="o.state == 'done'">
-                                        <span t-field="o.date_done"/>
-                                   </t>
-                                   <t t-if="o.state != 'done'">
-                                        <span t-field="o.scheduled_date"/>
-                                   </t>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="table table-condensed mt48" t-if="o.state!='done'">
-                        <thead>
-                            <tr>
-                                <th><strong>Product</strong></th>
-                                <th><strong>Quantity</strong></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <t t-set="lines" t-value="o.move_lines.filtered(lambda x: x.product_uom_qty)"/>
-                            <tr t-foreach="lines" t-as="move">
-                                <td>
-                                    <span t-field="move.product_id"/>
-                                    <p t-if="o.picking_type_code == 'outgoing'">
-                                        <span t-field="move.product_id.sudo().description_pickingout"/>
-                                    </p>
-                                    <p t-if="o.picking_type_code == 'incoming'">
-                                        <span t-field="move.product_id.sudo().description_pickingin"/>
-                                    </p>
-                                </td>
-                                <td>
-                                    <span t-field="move.product_uom_qty"/>
-                                    <span t-field="move.product_uom"/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="table table-condensed mt48" t-if="o.move_line_ids and o.state=='done'">
-                        <t t-set="has_serial_number" t-value="o.move_line_ids.mapped('lot_id')" groups="stock.group_production_lot"/>
-                        <thead>
-                            <tr>
-                                <th><strong>Product</strong></th>
-                                <th name="lot_serial" t-if="has_serial_number">
-                                    Lot/Serial Number
-                                </th>
-                                <th class="text-center"><strong>Quantity</strong></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr t-foreach="o.move_line_ids" t-as="move_line">
-                                <td>
-                                    <span t-field="move_line.product_id"/>
-                                    <p t-if="o.picking_type_code == 'outgoing'">
-                                        <span t-field="move_line.product_id.sudo().description_pickingout"/>
-                                    </p>
-                                    <p t-if="o.picking_type_code == 'incoming'">
-                                        <span t-field="move_line.product_id.sudo().description_pickingin"/>
-                                    </p>
-                                </td>
-                                <t t-if="has_serial_number">
-                                   <td>
-                                        <table width="100%">
-                                            <tr>
-                                                <td>
-                                                     <span t-field="move_line.lot_id"/>
-                                                     <t t-if="not move_line.lot_id">
-                                                         <span t-field="move_line.lot_name"/>
-                                                     </t>
-                                                 </td>
-                                                 <td name="lot_qty">
-                                                     <t t-if="move_line.product_qty">
-                                                        <span t-field="move_line.product_qty"/>
-                                                    </t>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                  </td>
-                                </t>
-                                <td class="text-center">
-                                    <span t-field="move_line.qty_done"/>
-                                    <span t-field="move_line.product_uom_id"/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <p t-if="o.backorder_id">
-                        This shipment is a backorder of <t t-esc="o.backorder_id.name"/>.
-                    </p>
-                    <p>
-                        <t t-if="o.search([('backorder_id', '=', o.id), ('state', 'not in', ['cancel', 'done'])])">
-                            All items couldn't be shipped, the remaining ones will be shipped as soon as they become available.
                         </t>
-                    </p>
-                </div>
-            </t>
-         </t>
+                    </div>
+                </table>
+
+                <table class="table table-sm o_main_table">
+                    <h3>Raw Materials</h3>
+                    <thead>
+                        <tr>
+                            <th class="text-left" style="width:80%"><strong>Product</strong></th>
+                            <th class="text-center" ><strong>Quantity</strong></th>
+                            <th class="text-center"><strong>Unit</strong></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <t t-foreach="product_datas" t-as='val'>
+                            <tr>
+                                <td class="text-left">
+                                    <span t-esc="val['product_id']"/>
+                                </td>
+                                <td class="text-center">
+                                    <span t-esc="val['qty']"/>
+                                </td>
+                                <td class="text-center">
+                                    <span t-esc="val['uom']"/>
+                                </td>
+                            </tr>
+
+                        </t>
+                    </tbody>
+                </table>
+            </div>
+        </t>
     </template>
 
     <template id="report_deliveryslip">
-        <t t-foreach="docs" t-as="o">
-            <t t-call="stock.report_delivery_document" t-lang="o.partner_id.lang"/>
+        <t t-call="web.html_container">
+            <t t-call="subcontract.report_delivery_document" />
         </t>
     </template>
 
