delivery state draft

--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -17,7 +17,7 @@
                 </xpath>
                 <xpath expr="//header" position="inside">
                     <button name="create_rfq" type="object" string="Create RFQ" attrs="{'invisible': [('is_rfq', '=', True)]}" class="btn-success"/>
-                    <button name="create_delivery_challan" type="object" string="Raw Materials Delivery" attrs="{'invisible': ['|', ('is_rfq', '=', False),('delivery_challan', '=', True)]}" class="btn-info"/>
+                    <button name="create_delivery_challan" type="object" string="Raw Materials Delivery" attrs="{'invisible': ['|', ('is_rfq', '=', False),('delivery_challan', '=', True)]}" class="btn-info" context="{'planned': True}"/>
                     <button name="print_delivery_challan" type="object" string="Print Delivery Challan" attrs="{'invisible': [('delivery_challan', '=', False)]}" class="btn-info"/>
                 </xpath>
                 <xpath expr="//field[@name='product_id']" position="after">
